syntax = "proto3";

service CinemaHallService {
    rpc Create (CreateCinemaHallRequest) returns (CreateCinemaHallResponse);
    rpc Delete (DeleteCinemaHallRequest) returns (DeleteCinemaHallResponse);
    rpc FindAll (FindAllCinemaHallsRequest) returns (FindAllCinemaHallsResponse);
    rpc Find (FindCinemaHallRequest) returns (FindCinemaHallResponse);
}

message CreateCinemaHallRequest {
    string name = 1;
    int32 rows = 2;
    int32 cols = 3;
}

message CreateCinemaHallResponse {
    CinemaHall hall = 1;
}

message DeleteCinemaHallRequest {
    int64 id = 1;
}

message DeleteCinemaHallResponse {
    CinemaHall hall = 1;
}

message FindAllCinemaHallsRequest {}

message FindAllCinemaHallsResponse {
    repeated CinemaHall halls = 1;
}

message FindCinemaHallRequest {
    int64 id = 1;
}

message FindCinemaHallResponse {
    CinemaHall hall = 1;
}

message CinemaHall {
    int64 id = 1;
    string name = 2;
    int32 rows = 3;
    int32 cols = 4;
}